--- a/index_list.html
+++ b/index_list.html
@@ -39,9 +39,12 @@
 
   </head>
 
-    <!-- <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script> -->
-    <script src="dist/mdl.bundle.js"></script>
+  <body>
 
+    <!-- <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script> -->
+    <script src="vendor.bundle.js"></script>
+    <script src="dist/mdl.bundle.js"></script>
+    <script src="main.bundle.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
