two big things: have fixture json bikes be shown with react. also introduce express.

--- a/bikes.html
+++ b/bikes.html
@@ -64,9 +64,9 @@
         </div>
       </header>
 
-      <main class="mdl-layout__content" id="container">
+      <main class="mdl-layout__content">
 
-
+        <div class="mdl-layout__tab-panel is-active" id="overview">not rendered</div>
 
         <br><br>
         <footer class="mdl-mini-footer">
