--- a/index.html
+++ b/index.html
@@ -2,68 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>About My Bike</title>
-    <link rel="stylesheet" media="all" href="landing.css" />
+    <title>About My Bike Dev</title>
+    <link rel="stylesheet" media="all" href="/dist/css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
- <body class="default-primary-color text-primary-color">
+ <body>
 
-  <div class="wrapper">
+    <div id="target" class="container"></div>
 
-    <div class="row">
+    <script src="/dist/vendor.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
 
-    <div class="main">
-
-    <img src="dist/images/logo.png" class="logo" width="295" height="53" alt="About My Bike">
-   
-
-    <form action="#" enctype="multipart/form-data" method="post">
-
-      <label class="textfield">
-        <input type="email" name="email" id="signup_email" required="true">
-        <span class="textfield__label">Your email</span>
-        <!--<span class="textfield__label">Your email (we won't share it)</span>-->
-      </label>
-
-      
-
-        <label class="custom-file-upload">
-    <input type="file" name="image" />
-    Include optional photo of your bike
-</label>
-
- 
-
-      <button type="submit" name="submit" class="amb-early-access-submit btn accent-color"><span>Alert me when site is ready</span></button>
-      &nbsp;<div class="submit-message"></div>
-    </form>
-
-
-    <footer class="dark-primary-color-text"><small>&copy;2016 AboutMyBike.com</small></footer>
-
-  </div>
-
-</div>
-</div>
-<script>
-
-document.addEventListener("DOMContentLoaded", function(event) { 
-
-  $(document).ready(function() {
-
-    $('#early-access-request').click(function() {
-    if($('#bike-photo-upload').css('visibility') === 'visible') {
-        $('#bike-photo-upload').css('visibility', 'hidden');
-    } else {
-        $('#bike-photo-upload').css('visibility', 'visible');
-      }
-    });
-  });
-});
-
-</script>
-<script src="script.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-</body>
+  </body>
 </html>
