--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <div id="target" class="container"></div>
 
-    <script src="/dist/vendor.bundle.js"></script>
-    <script src="/dist/main.bundle.js"></script>
+    <script src="vendor.bundle.js"></script>
+    <script src="main.bundle.js"></script>
 
   </body>
 </html>
