--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About My Bike Dev</title>
-  <link rel="stylesheet" media="all" href="/dist/css/main.css" />
+  <link mime-type="text/css" rel="stylesheet" media="all" href="/dist/css/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
