--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
   <div id="target" class="container"></div>
 
-
-  <script src="vendor.bundle.js"></script>
-  <script src="main.bundle.js"></script>
+  <script src="/dist/vendor.bundle.js"></script>
+  <script src="/dist/main.bundle.js"></script>
 
 </body>
 
